crates/aranya-policy-compiler/tests/data/scoping/map_var_before_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
3 |     check p == None else todo()
  |           ^ 'p' not in scope
